--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <article class="box">
           <div class="text-box">
             <h2>Automate your event capturing</h2>
-            <p>Chronos provides an intuitive configuration file that lets you specify which events you'd like to capture. Afer that, just drop the tracker in your webpage and you're all set - that's it.</p>
+            <p>Chronos provides an intuitive configuration file that lets you specify which events you'd like to capture. After that, just drop the tracker in your webpage and you're all set - that's it.</p>
             <a class="button" href="casestudy.html">Learn More</a>
           </div>
         </article>
